--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "scripts": {
-    "run": "ts-node --files ./src/run.ts"
+    "main": "ts-node --files ./src/cli.ts"
   },
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.14.41",
     "graphql": "^15.5.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "10.0.0",
     "typescript": "^4.2.4"
   }
 }
