--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "scripts": {
-    "main": "ts-node --files ./src/cli.ts"
-  },
+  "name": "pathofexile-dat-schema",
+  "version": "1.0.0",
   "license": "MIT",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "generate": "node dist/cli.js"
+  },
+  "files": [
+    "dist/index.*",
+    "dist/types.*"
+  ],
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.14.41",
     "graphql": "^15.5.0",
-    "ts-node": "10.0.0",
     "typescript": "^4.2.4"
   }
 }
