--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pathofexile-dat-schema",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "MIT",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "generate": "node dist/cli.js"
