--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - '**'
+    branches-ignore:
+      - 'master'
+  pull_request:
+    branches:
+      - '**'
 
 jobs:
   build:
@@ -16,12 +21,3 @@ jobs:
     - run: yarn --frozen-lockfile
     - run: yarn run tsc
     - run: yarn run generate
-    - name: Upload schema
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: schema.min.json
-        token: ${{ secrets.GITHUB_TOKEN }}
-        tag: latest
-        allowUpdates: true
-        omitBodyDuringUpdate: true
-        omitNameDuringUpdate: true
