--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - '**'
     branches-ignore:
-      - 'master'
+      - 'main'
   pull_request:
     branches:
       - '**'
