--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pathofexile-dat-schema",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "license": "MIT",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "packageManager": "pnpm@8.6.1",
+  "exports": "./dist/index.js",
   "scripts": {
     "generate": "node dist/cli.js"
   },
@@ -11,10 +12,9 @@
     "dist/index.*",
     "dist/types.*"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "@types/node": "^14.14.41",
-    "graphql": "^15.5.0",
-    "typescript": "^4.2.4"
+    "@types/node": "^18.17.1",
+    "graphql": "^16.7.1",
+    "typescript": "^5.1.6"
   }
 }
