--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,9 +12,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - uses: pnpm/action-setup@v2
-    - run: pnpm i --frozen-lockfile
-    - run: pnpm exec tsc
-    - run: pnpm run generate
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+    - run: npm ci
+    - run: npm exec tsc
+    - run: npm run generate
