--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,12 +9,11 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - uses: pnpm/action-setup@v2
-    - run: pnpm i --frozen-lockfile
-    - run: pnpm exec tsc
-    - run: pnpm run generate
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+    - run: npm ci
+    - run: npm exec tsc
+    - run: npm run generate
     - name: Upload schema
       uses: ncipollo/release-action@v1
       with:
