--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "exports": "./dist/index.js",
   "scripts": {
-    "generate": "node dist/cli.js"
+    "generate": "node dist/cli.js",
+    "serve": "node dist/serve.js"
   },
   "files": [
     "dist/index.*",
