--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   ],
   "devDependencies": {
     "@parcel/watcher": "^2.5.0",
+    "@types/d3": "^7.4.3",
     "@types/node": "^22.0.0",
+    "d3": "^7.9.0",
     "graphql": "^16.7.1",
     "typescript": "^5.1.6"
   }
