--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "exports": "./dist/index.js",
   "scripts": {
     "generate": "tsc --noCheck && node dist/cli.js",
-    "generate:watch": "tsc --noCheck && node dist/cli.js --watch"
+    "generate:watch": "tsc --noCheck && node dist/cli.js --watch",
+    "diff": "./bin/diff-dat-schema"
   },
   "files": [
     "dist/index.*",
